# AeroSphere

./: .gitignore  .graphifyignore  HANDOFF.md  README.md  aerosphere_master_specification.md  aerosphere_product_design.md  community_feature_wishlist.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  shared_cockpit_analysis.md  smart_profile_auto_assignment_design.md  tsconfig.json
.agents/: AGENTS.md
.agents/skills/boost-my-workflow/: SKILL.md
cloud-profiles/: Dockerfile  package-lock.json  package.json
cloud-profiles/public/: app.js  index.html  style.css
cloud-profiles/src/: server.ts
cloud-profiles/src/middleware/: auth.ts
cloud-profiles/src/routes/: auth.ts  profiles.ts
cloud-signaling/: Dockerfile  package.json  rooms.ts  server.ts  tsconfig.json
docs/: dev-log.md  obsidian-session-sync.md
src/main/: index.ts  preload.ts
src/main/career/: AirportDatabase.ts  CareerDatabase.ts  EconomyEngine.ts  FlightTracker.ts  FuelPriceService.ts  LandingScorer.ts  MissionGenerator.ts
src/main/cloud/: FirebaseAuthManager.ts  ProfileCloudClient.ts
src/main/ipc/: handlers.ts
src/main/lod-engine/: DynamicLODController.ts  FPSMonitor.ts  FlightPhaseDetector.ts
src/main/memory/: LODPatcher.ts  MemoryScanner.ts  memoryjs.d.ts
src/main/networking/: ConnectionModes.ts  DataChannelRouter.ts  JoinCodeGenerator.ts  PeerManager.ts  SignalingClient.ts  StateSyncEngine.ts  VoIPManager.ts
src/main/settings/: SettingsStore.ts
src/main/shared-cockpit/: AutoLearnEngine.ts  ControlAuthority.ts  InputBlender.ts  ProfileManager.ts  SemanticClassifier.ts
src/main/simconnect/: InputEventEnumerator.ts  LVarBridge.ts  SimConnectManager.ts  TelemetryPoller.ts  types.ts
src/main/wasm-installer/: WASMInstaller.ts
src/renderer/: App.css  App.tsx  index.html  main.tsx
src/renderer/hooks/: useCareer.ts  useLOD.ts  usePeer.ts  useSimConnect.ts  useVoIP.ts
src/renderer/pages/: CareerPage.css  CareerPage.tsx  CockpitPage.css  CockpitPage.tsx  DashboardPage.css  DashboardPage.tsx  LODPage.css  LODPage.tsx
src/shared/: constants.ts  firebase-config.ts  ipc-channels.ts  types.ts
wasm-module/: CMakeLists.txt
wasm-module/PackageSources/: layout.json  manifest.json
wasm-module/src/: client_data.h  event_bridge.c  lvar_bridge.c  main.c
(+71 files in other folders)
